# fun-zotero-research-gpt

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTEME.md  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
scripts/: beauty_rag.py  load_sqlite.py  main.py  manual_rag.py  plumbings.py  test_zotero.py  use_zotero.py
src/zotgpt/: backend.py  embed.py  metastore.py  retrieval.py  storage.py  vectorstore.py  zotero.py
src/zotgpt/app/: home.py  utils.py
src/zotgpt/app/pages/: converse💬.py  library📚.py  zi-old-chat🚧.py
